Updated the tomcat7 maven plugin so that we can launch the webapp in development mode right from the command line using maven with no requirement to intall our own Tomcat.
Added some servlet-api excludes that the test depenencies bring in that conflict
with the Tomcat7 maven plugin.